--- a/intracen-react/src/colors.css
+++ b/intracen-react/src/colors.css
@@ -4,6 +4,7 @@
     --brown_60: rgba(255, 210, 128, 0.6);
     --brown_40: rgba(255, 210, 128, 0.4);
     --brown_20: rgba(255, 210, 128, 0.2);
+    --brown_10: rgba(255, 210, 128, 0.1);
     --contrast_100: rgba(179, 141, 90, 1);
     --contrast_80: rgba(179, 141, 90, 0.8);
     --contrast_60: rgba(179, 141, 90, 0.6);
