--- a/intracen-react/src/navbar/buttonBar.css
+++ b/intracen-react/src/navbar/buttonBar.css
@@ -6,22 +6,25 @@
     align-items: center;
     margin: 0 auto;
     height: 3.5rem;
-    position: fixed; /* Make it stick/fixed */
-    top: 5rem;
+    position: fixed; /* Make it stick/fixed */    
     width: 100%;
     transition: top 0.4s; /* Transition effect when sliding down (and up) */
     background-color: var(--brown_100);}
     
 .navbar {
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    width: 70%;
-    margin: 0 auto;
-    padding: 0;
+    grid-template-columns: repeat(8, 1fr);    
+    width: 70%;    
+    margin: 0 auto;    
     background-color: var(--brown_100);
 }
     
 
+/* .navbar :nth-child(3) {
+    font-weight: bold;
+    color: blue;
+}
+ */
 
 /* --- Responsive design --- */
 @media only screen and (max-width: 1200px) {
