--- a/intracen-react/src/relations/css/newTable.css
+++ b/intracen-react/src/relations/css/newTable.css
@@ -7,7 +7,7 @@
     width: 70%;
     margin: 3rem auto 2rem auto;
     text-align: center;
-    border-top: 1px solid green;
+    border-top: 2px solid var(--contrast_100);
 }
 
     #divNewTableTitle button {
